Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
                     <div class="feature-icon">🔐</div>
                     <div class="feature-text">
                         <strong>Sem Login</strong>
-                        Não requer permissões de login do Instagram
+                        Não requer permissões de login do Instagram ao contrário de algumas extensões
                     </div>
                 </div>
                 
@@ -1097,6 +1097,12 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <!-- Creator Section -->
+        <div class="about-section" id="creator-section">
+            <h2><span class="emoji">👨‍💻</span> Sobre o Criador</h2>
+            <p>Olá — sou o Afonso, desenvolvedor independente e criador desta ferramenta. Atualmente estudante de Mestrado em Engenharia Informática na Universidade do Minho, mas com forte paixão pela Inteligência Artificial. Desenvolvi esta ferramenta com o intuito de ajudar os utilizadores da rede social Instagram a descobrirem quem são as Kylie Jenners desta vida.</p>
         </div>
 
         <!-- Instruções em Abas -->
@@ -1142,7 +1148,10 @@
                             <div class="step-number">4</div>
                             <div class="step-title">Solicitar Download</div>
                             <div class="step-content">
-                                Clica em <code>Request download</code> e escolhe as configurações (ver aba de Requisitos).
+                                Clica em <code>Request download</code> e define as configurações de acordo com a imagem abaixo (podes também consultar a aba de <a href="#" onclick="switchInstructionTab('configuracoes'); event.preventDefault();">Requisitos</a>).
+                            </div>
+                            <div class="print">
+                                <img src="images/request.jpg" alt="Solicitar Download" width="50%" justify="center" align="center">
                             </div>
                         </div>
 
@@ -1150,7 +1159,7 @@
                             <div class="step-number">5</div>
                             <div class="step-title">Aguardar e Descarregar</div>
                             <div class="step-content">
-                                O Instagram preparará o ficheiro. Receberás uma notificação no email associado à tua conta Instagram quando estiver pronto para download. Descarregue o ficheiro comprimido (.zip).
+                                O Instagram preparará o ficheiro. Receberás uma notificação no email associado à tua conta Instagram quando estiver pronto para download. Descarrega o ficheiro comprimido (.zip).
                             </div>
                         </div>
 
@@ -1284,14 +1293,14 @@
                                 <span class="toggle">▼</span>
                             </div>
                             <div class="accordion-content">
-                                Os números desta aplicação podem diferir do Instagram porque:
+                                Os números desta aplicação podem diferir dos números reais do Instagram porque:
                                 <ul>
-                                    <li>O ficheiro foi criado quando fez o download dos dados</li>
-                                    <li>Desde então, pode ter novos followers/unfollowers</li>
-                                    <li>Pode ter deixado de seguir ou seguido mais pessoas</li>
+                                    <li>O ficheiro foi criado quando fizeste o download dos dados</li>
+                                    <li>Desde então, podes ter novos followers/unfollowers</li>
+                                    <li>Podes ter deixado de seguir ou seguido mais pessoas</li>
                                     <li>Algumas contas podem ter sido removidas</li>
                                 </ul>
-                                <strong>Recomendação:</strong> Faça downloads periódicos para manter os dados atualizados.
+                                <strong>Recomendação:</strong> Faz downloads periódicos para manter os dados atualizados.
                             </div>
                         </div>
                     </div>
